# adoptopenjdk-installer

./: Cargo.toml  README.md
.rpm/: adoptopenjdk-installer.spec
src/: main.rs
src/adoptopenjdk/: mod.rs  request.rs  response.rs
src/installer/: mod.rs  settings.rs
src/utils/: utils.rs
