[package]
name = "adoptopenjdk-installer"
version = "0.1.0"
authors = ["wherkamp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6.0", features = ["full"] }
serde_qs = "0.8.3"
strum = { version = "0.21.0", features = ["derive"] }
strum_macros = "0.21.1"
derive_more = "0.99.14"
indicatif = "0.16.0"
colored = "2.0.0"
flate2 = "1.0.20"
tar = "0.4.35"
[dependencies.reqwest]
version = "0.11.3"
features = ["json"]