[package]
name = "adoptopenjdk-installer"
version = "1.0.0-RC0"
authors = ["wherkamp"]
edition = "2018"
license = "MIT"
repository = "https://github.com/wherkamp/adoptopenjdk-installer"
keywords = ["java"]
categories = ["command-line-utilities"]
description = "A Linux installer for AdoptOpenJDK "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.11.0", features = ["full"] }
serde_qs = "0.8.3"
strum = { version = "0.21.0", features = ["derive"] }
strum_macros = "0.21.1"
derive_more = "0.99.14"
indicatif = "0.16.0"
colored = "2.0.0"
flate2 = "1.0.22"
tar = "0.4.35"
toml = "0.5.8"
whoami = "1.1.2"
clap = "2.33.3"
url = "2.2"
[dependencies.reqwest]
version = "0.11.3"
features = ["json"]
[package.metadata.rpm]
package = "adoptopenjdk-installer"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
adoptopenjdk-installer = { path = "/usr/bin/adoptopenjdk-installer" }
